--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
   <head>
-    <meta charset="utf-8" />
-		<meta http-equiv="Content-Language" content="pt-br">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Especialista em Tecnologia da Informação"
-    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,7 +17,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Carlos Alberto ETI</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
